[tool.poetry]
name = "spherefitting"
version = "0.1.0"
description = ""
authors = ["Yuki Yoshikawa <yoshikawa@inaho.co>"]

[tool.poetry.dependencies]
python = "^3.7"
open3d = "0.10.0.0"
numpy = "^1.19.0"
scipy = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
